<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="18dp" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/item_func" />

        <Button
            android:id="@+id/func_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="60dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_money" />

        <Button
            android:id="@+id/money_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_vip" />

        <Button
            android:id="@+id/vip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy" />
    </LinearLayout>

    <TextView
        android:id="@+id/observer_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="17dp"
        android:text="@string/hello_world"
        tools:context=".MainActivity" />

</RelativeLayout>
